added interaction to first passage

--- a/Beegin.html
+++ b/Beegin.html
@@ -216,6 +216,7 @@ If you create divs marked with .mapsection - they should be hexagons with a glow
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
 
@@ -225,7 +226,8 @@ If you create divs marked with .mapsection - they should be hexagons with a glow
 
 
 
-</script><tw-passagedata pid="1" name="Beegin+End" tags="" position="64,86">You begin at The End (click The End, it expands into description of The End, a local bar). You are sad (click on sad, it expands into reasons why). Everyone is sad. But soon happiness will happen, because She is arriving (She expands into the Queen). Everyone is happy until dark viscuous blood is coughed up by the queen. Hilarity ensues. You run forward, pushing aside the drones panicking around Her. &quot;Let me through,&quot; you say. &quot;I&#39;m a [[doctor]].&quot;
+
+</script><tw-passagedata pid="1" name="Beegin+End" tags="" position="64,86">You begin at &lt;span id=&quot;theEnd&quot;&gt;&lt;&lt;click &quot;The End&quot;&gt;&gt;&lt;&lt;replace &quot;#theEnd&quot;&gt;&gt;description of The End goes here&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt;. You are &lt;span id=&quot;sad&quot;&gt;&lt;&lt;click &quot;sad&quot;&gt;&gt;&lt;&lt;replace &quot;#sad&quot;&gt;&gt;sad because blahblahblah&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt;. Everyone is sad. But soon happiness will happen, because &lt;span id=&quot;she&quot;&gt;&lt;&lt;click &quot;She&quot;&gt;&gt;&lt;&lt;replace &quot;#she&quot;&gt;&gt;the Queen&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt; is arriving. Everyone is happy until dark viscuous blood is coughed up by the queen. Hilarity ensues. You run forward, pushing aside the drones panicking around Her. &quot;Let me through,&quot; you say. &quot;I&#39;m a [[doctor]].&quot;
 </tw-passagedata>
 <tw-passagedata pid="2" name="doctor" tags="" position="74,219">That&#39;s not entirely true. You //were// a doctor. You would never say you were the //best// doctor in the hive, but you were a damn good one. A lot of good bees died on, but you saved so, so many more. Enough to make it worth it at the end of the day. Enough to justify going to sleep, no matter how stained with green your hands were. But that was until The [[Disease|disease]] came to the hive.</tw-passagedata>
 <tw-passagedata pid="3" name="disease" tags="" position="73,344">The Disease came from nowhere, and brought this hive to its knees. It started small, just a few isolated cases. The first deaths were hard, but you told yourself they were to be expected with a sudden outbreak. You learned enough to be prepared for the ***next*** case.
@@ -681,7 +683,7 @@ interactions, free yourself, find out about {Chekov Plottenpoint&#39;s first nam
 interactions, free yourself, get {stolen Royal Jelly}, head back to [[Main Plaza]] 
 &lt;&lt;endif&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="51" name="Lab" tags="" position="528,1271">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="52" name="Note on ***" tags="" position="588.3333333333334,5">To make things easier, I surround a word or phrase with triple asterisks ***like this*** to denote that the player clicks on it, and the next block of words down to the next triple asterisks appear. See [[disease]] for example of this
+<tw-passagedata pid="52" name="Note on ***" tags="" position="588,5">To make things easier, I surround a word or phrase with triple asterisks ***like this*** to denote that the player clicks on it, and the next block of words down to the next triple asterisks appear. See [[disease]] for example of this
 </tw-passagedata>
 </tw-storydata>
 </div>
